--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -15,6 +16,7 @@
         {% include 'global/partials/pagination.html' %}
     </main>
     {% include 'global/partials/footer.html' %}
+    <script src="{% static 'global/js/scripts.js' %}"></script>
 </body>
 
 </html>
