--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="{{ html_language }}">
 
 <head>
     {% include 'global/partials/head.html' %}
